fix body overflow

--- a/vanillajs/styles.css
+++ b/vanillajs/styles.css
@@ -5,7 +5,7 @@
   
   body,
   html {
-    height: 100%;
+    height: 105%;
   }
   
   body {
@@ -39,10 +39,13 @@
   
   /* The Modal */
   .modal-container {
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
    }
   .modal {
     display: none;
